--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -34,7 +34,7 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title" id="facebookModalLabel">Les équipes VVF Villages se préparent
 <br>et vous envoient votre photo&nbsp;!
-Sera-t-elle plus folle
+<br>Sera-t-elle plus folle
 <br>que celle en exemple ci-dessous&nbsp;?</h4>
       </div>
       <div class="modal-body">
