--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -22,7 +22,7 @@
 	<hr>
   	<div class="col-video">
         <h3>Bienvenue <span>dans les nouveaux locaux de l'équipe VVF Villages</span></h3>
-        <img src="/styles/public/gfx/video.jpg" width="752" height="414" alt="video">
+        <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
         <a href="#" title="Réglement" class="reglement">Réglement</a>
         <div class="conditions">*Soumis à conditions</div>
    </div>
