--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -43,7 +43,11 @@
     <input type="text" class="form-control" id="message" placeholder="Je tape ici le message que je souhaite faire apparaître avec la photo sur mon mur...">
   </div>
   <div class="text-center">
-<img src="/styles/public/gfx/exemple.png">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <img src="/styles/public/gfx/exemple.png">
+    </div>
+  </div>
  <div></div></div>
 </div>
       <div class="modal-footer">
