--- a/modules/admin/app/public/views/public/reglement.hbs
+++ b/modules/admin/app/public/views/public/reglement.hbs
@@ -5,9 +5,7 @@
    	  <h1 id="h1defi"><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
     </div>
     <img src="/styles/public/gfx/pola-fanny.png" width="247" height="259" alt="Sophie" class="pola pola-fanny">
-    <img src="/styles/public/gfx/pola-mathieu-celine.png" width="244" height="259" alt="Matthieu et Céline" class="pola polas-mathieu-celine">
-    <img src="/styles/public/gfx/pola-terral.png" width="260" height="263" alt="Matthieu et Céline" class="pola pola-terral">
-	  	<div class="col-middle">
+	  	<div class="col-middle-extended">
     	<h1>RÈGLEMENT DU JEU-CONCOURS FACEBOOK</h1>
 <h2>« VVF Villages like you » </h2>
 <div><a href="http://www.facebook.com/VVFVillages.pageofficielle">http://www.facebook.com/VVFVillages.pageofficielle</a></div>
