--- a/modules/admin/app/public/views/public/pas-autorisation.hbs
+++ b/modules/admin/app/public/views/public/pas-autorisation.hbs
@@ -15,7 +15,7 @@
     </div>
 	<hr>
   	<div class="col-video">
-        <a href="#" title="Réglement" class="reglement">Réglement</a>
+        <a href="/reglement" target="_blank" title="Réglement" class="reglement">Réglement</a>
         <div class="conditions">*Soumis à conditions</div>
    </div>
 </div>
