--- a/modules/admin/app/public/views/public/reglement.hbs
+++ b/modules/admin/app/public/views/public/reglement.hbs
@@ -40,13 +40,13 @@ La responsabilité de la Société Organisatrice se limite à la seule offre des
 <h3>ARTICLE 6 – DOTATIONS</h3>
 <p>6.1 Les gagnants tirés au sort par le jury se verront attribuer le lot suivant. <br>
 <br>
-Lot 1 : un an de vacances VVF Villages  (1 séjour hiver + 1 séjour été ou 1 séjour / vacances scolaires ?) <br>
-1 semaine 8 jours/ 7 nuits, en location 4/5 personnes en hiver (du XX /XX/2015 au XX/XX/201X) et 1 semaine 8 jours/ 7 nuits, en location 4/5 personnes en PEA (du XX/XX au XX/XX/201X), dans les villages de vacances VVF Villages (partenaires et campings), hors restauration et prestations annexes, sous réserve de disponibilité. Ce bon ne peut être ni rétroactif, ni monnayable, même en cas d’annulation.<br>
-Lot d’une valeur approximative (selon les destinations choisies de XXXX euros.<br>
+Lot 1 : Pour le grand gagnant, une année de vacances VVF Villages  (1 séjour hiver + 1 séjour été) <br>
+1 semaine 8 jours/ 7 nuits, en location 4/5 personnes en hiver (du 20/12/2014 au 11/04/2015) et 1 semaine 8 jours/ 7 nuits, en location 4/5 personnes en Printemps - Eté - Automne (du 11/04/2015 au 31/10/2015), dans les villages de vacances VVF Villages (hors partenaires, hors offre Original VVF et campings), hors restauration et prestations annexes, sous réserve de disponibilité. Ce bon ne peut être ni rétroactif, ni monnayable, même en cas d’annulation. <br>
+Lot d’une valeur approximative (selon les destinations choisies) de 2000 euros. <br>
 <br>
-Lot 2 à 11 : 10 week-ends HVS ? 4/5 personnes en location (1 week-end par gagnant).<br>
-1 week-end 3 jours/ 2 nuits hors vacances scolaires en location 4/5 personnes, hors restauration et prestations annexes. Ce week-end se déroule du XX/XX/201X au XX/XX/201X dans les villages de vacances VVF Villages (hors partenaires et campings), sous réserve de disponibilité. Ce bon ne peut être ni rétroactif, ni monnayable, même en cas d’annulation. <br>
-Lot d’une valeur approximative (selon les destinations choisies) de XXX euros par week-end.
+Lots 2 à 11 : Pour les 10 personnes suivantes, 10 week-ends hors vacances scolaires 4/5 personnes en location (1 week-end par personne). <br>
+1 week-end 3 jours/ 2 nuits hors vacances scolaires en location 4/5 personnes, hors restauration et prestations annexes. Ce week-end se déroule du 03/01/2014 à 17/10/2015 dans les villages de vacances VVF Villages (hors partenaires et campings), sous réserve de disponibilité. Ce bon ne peut être ni rétroactif, ni monnayable, même en cas d’annulation. <br>
+Lot d’une valeur approximative (selon les destinations choisies) de 150 euros par week-end.
 </p>
 
 <p>6.2 Le prix sera mis à disposition du gagnant et à lui seul suivant les informations fournies sur une base déclarative dans le formulaire de participation au Jeu.</p>
