--- a/modules/admin/app/public/views/admin/partials/data/visitor.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/visitor.hbs
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-        <button class="btn btn-danger btn-sm data-rephoto" data-facebookid="{{id}}">Remettre dans la file</button>
+        <button class="btn btn-danger btn-sm data-rephoto" data-facebookid="{{../../id}}">Remettre dans la file</button>
         {{/with}}
         {{/if}}
         </p>
