--- a/modules/admin/app/public/views/admin/partials/data/filters/visitors.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/filters/visitors.hbs
@@ -7,10 +7,10 @@
             <input type="radio" name="filter" autocomplete="off" checked> Tous
         </label>
         <label class="btn btn-default filter-queue">
-            <input type="radio" name="filter" autocomplete="off"> Dans la fil d'attente
+            <input type="radio" name="filter" autocomplete="off"> Prochaine alerte
         </label>
-        <label class="btn btn-default filter-error">
-            <input type="radio" name="filter" autocomplete="off"> En erreur
+        <label class="btn btn-default filter-next">
+            <input type="radio" name="filter" autocomplete="off"> En attente
         </label>
     </div>
 </div>
