--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -23,7 +23,7 @@
   	<div class="col-video">
         <h3>Bienvenue <span>dans les nouveaux locaux de l'équipe VVF Villages</span></h3>
         <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
-        <a href="/reglement" target="_blank" title="Réglement" class="reglement">Réglement</a>
+        <a href="/reglement" target="_blank" title="Règlement" class="reglement">Règlement</a>
         <div class="conditions">*Soumis à conditions</div>
    </div>
 </div>
