--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -1,27 +1,27 @@
 {{> head}}
 <div id="wrapper">
-    <img src="gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
+    <img src="/styles/public/gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
      <div class="feuille">
-      <h1><img src="gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+      <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
       <h2>fêtons ensemble notre<br>nouvelle installation</h2>
         <span>VVF Villages vous passe<br>le <b>Bonjour</b> depuis ses<br>nouveaux locaux !</span>
     </div>
-    <img src="gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
-    <img src="gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
+    <img src="/styles/public/gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
+    <img src="/styles/public/gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
     <div class="col-right col-right-large">
       <p><span>Qui sera le plus rapide aujourd'hui pour vous saluer chez VVF Villages</span></p>
           <a id="defi" href="#" title="Je lance le défi" class="btn btn-margin btn-defi"><span></span><b>Je lance le défi</b></a>
     </div>
-    <img src="gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
+    <img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
     <div class="col-int-large">
       <p><span>Vite ! Deviens fan de la page !</span></p>
         <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-        <a href="#" title="j'aime"><img src="gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime"></a>
+        <a href="#" title="j'aime"><img src="/styles/public/gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime"></a>
         <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
     </div>
   <hr>
     <div class="col-video">
-        <img src="gfx/video.jpg" width="752" height="414" alt="video">
+        <img src="/styles/public/gfx/video.jpg" width="752" height="414" alt="video">
         <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
         <div class="conditions">*Lire le réglement complet et détail de lots <a href="/reglement" title="réglement">http://hello.fb.byperiscope/reglement</a></div>
    </div>
