--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -16,7 +16,7 @@
     <div class="col-int-large">
       <p><span>Vite ! Deviens fan de la page !</span></p>
         <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-        <a href="#" title="j'aime"><img src="/styles/public/gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime"></a>
+        <img src="/styles/public/gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime" class="j-aime-img">
         <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
     </div>
   <hr>
