--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -1,62 +1,29 @@
-
-<!DOCTYPE html>
-<html lang="fr-FR">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VVF Villages like you</title>
-    <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
-    <!--[if lt IE 9]>
-       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="all" href="/styles/public/styles.css" />
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
-<!--[if lt IE 7]> <body class="ie6"><![endif]-->
-<!--[if IE 7]>    <body class="ie7"><![endif]-->
-<!--[if IE 8]>    <body class="ie8"><![endif]-->
-<!--[if IE 9]>    <body class="ie9"><![endif]-->
-<!--[if gt IE 9]> <body><![endif]-->
-<!--[if !IE]><!--><body><!--<![endif]-->
-
-
 {{> head}}
-
-
-
-
-
-
-
-
 <div id="wrapper">
-    <img src="/styles/public/gfx/header_accueil.jpg" width="810" height="293" alt="VVF Villages like you" class="header-accueil">
+    <img src="/styles/public/gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
      <div class="feuille">
-   	  <h1 id="h1defi"><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
-		  <h2 id="h2defi">fêtons ensemble notre<br>nouvelle installation</h2>
-      <span>VVF Villages vous fait<br>découvrir ses nouveaux<br>locaux et vous passe<br><b>le bonjour !</b></span>
+      <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+      <h2>fêtons ensemble notre<br>nouvelle installation</h2>
+        <span>VVF Villages vous passe<br>le <b>Bonjour</b> depuis ses<br>nouveaux locaux !</span>
     </div>
     <img src="/styles/public/gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
     <img src="/styles/public/gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
-    <div class="col-right">
-    	<p><span>Qui sera la plus rapide aujourd'hui pour vous saluer chez VVF Villages</span> L'équipe de Lucie, Bruno ou Fabrice ?</p>
-        <div class="col-int">
-          <a id="defi" href="#" title="Je lance le défi" class="btn-defi"><span></span><b>Je lance le défi</b></a>
-            <div class="db left30">
-              <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-            </div>
-            <!-- <a href="#" title="j'aime" class="db left30"><img src="/styles/public/gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime"></a> -->
-          <img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="db left15">
-         </div>
+    <div class="col-right col-right-large">
+      <p><span>Qui sera le plus rapide aujourd'hui pour vous saluer chez VVF Villages</span></p>
+          <a id="defi" href="#" title="Je lance le défi" class="btn-defi btn-margin"><span></span><b>Je lance le défi</b></a>    </div>
+    <img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
+    <div class="col-int-large">
+      <p><span>Vite ! Deviens fan de la page !</span></p>
+        <img src="/styles/public/gfx/j-aime-fleches.png" width="136" height="108" alt="j'aime" class="j-aime-img">
+        <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+
+        <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
     </div>
-	<hr>
-  	<div class="col-video">
-        <h3>Bienvenue <span>dans les nouveaux locaux de l'équipe VVF Villages</span></h3>
-        <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
-        <a href="/reglement" target="_blank" title="Règlement" class="reglement">Règlement</a>
-        <div class="conditions">*Soumis à conditions</div>
+  <hr>
+    <div class="col-video">
+        <img src="/styles/public/gfx/video.jpg" width="752" height="414" alt="video">
+        <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
+        <div class="conditions">*Lire le réglement complet et détail de lots <a href="http://hello.fb.byperiscope/reglement" title="réglement">http://hello.fb.byperiscope/reglement</a></div>
    </div>
 </div>
 <div class="modal fade" id="facebookModal" tabindex="-1" role="dialog" aria-labelledby="facebookModalLabel" aria-hidden="true">
@@ -89,23 +56,4 @@
     </div>
   </div>
 </div>
-
-
-
-
-
 {{> footer}}
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-8562726-2', 'auto');
-  ga('send', 'pageview');
-</script>
-<script src="/scripts/public/script.js"></script>
-<div id="fb-root"></div>
-</body>
-</html>
