--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -23,7 +23,7 @@
     <div class="col-video">
         <img src="/styles/public/gfx/video.jpg" width="752" height="414" alt="video">
         <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
-        <div class="conditions">*Lire le réglement complet et détail de lots <a href="http://hello.fb.byperiscope/reglement" title="réglement">http://hello.fb.byperiscope/reglement</a></div>
+        <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope/reglement" title="réglement">http://hello.fb.byperiscope/reglement</a></div>
    </div>
 </div>
 <div class="modal fade" id="facebookModal" tabindex="-1" role="dialog" aria-labelledby="facebookModalLabel" aria-hidden="true">
