--- a/modules/admin/app/public/views/public/attente.hbs
+++ b/modules/admin/app/public/views/public/attente.hbs
@@ -14,9 +14,9 @@
         <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
     </div>
 	<hr>
-  	<div class="col-video">
-        <a href="/reglement" target="_blank" title="Règlement" class="reglement">Règlement</a>
-        <div class="conditions">*Soumis à conditions</div>
+    <div class="col-video">
+        <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
+        <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope/reglement" title="Réglement complet">https://hello.fb.byperiscope/reglement</a></div>
    </div>
 </div>
 {{> footer}}
