--- a/modules/admin/app/public/views/public/attente.hbs
+++ b/modules/admin/app/public/views/public/attente.hbs
@@ -15,6 +15,7 @@
     </div>
 	<hr>
     <div class="col-video">
+        <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
         <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
         <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope/reglement" title="Réglement complet">https://hello.fb.byperiscope/reglement</a></div>
    </div>
