--- a/modules/admin/app/public/views/public/fermeture-weekend.hbs
+++ b/modules/admin/app/public/views/public/fermeture-weekend.hbs
@@ -16,7 +16,7 @@
 	<hr>
     <div class="col-video">
         <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
-        <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope/reglement" title="Réglement complet">https://hello.fb.byperiscope/reglement</a></div>
+        <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope.com/reglement" title="Réglement complet">https://hello.fb.byperiscope.com/reglement</a></div>
    </div>
 </div>
 {{> footer}}
