--- a/modules/admin/app/public/styles/public/styles.css
+++ b/modules/admin/app/public/styles/public/styles.css
@@ -597,12 +597,11 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
 
 @media screen and (max-width: 809px) {
   #wrapper { width: 100%; }
-  .j-aime-img{display:none;}
   .header-accueil { width: 100%; height: auto; }
   .feuille { width: 45%; background-position: center top; background-size: contain; height: auto; left: 0; }
   .feuille span { position: absolute; width: 210%; margin-top: 10px; }
   .logo { width: 75%; height: auto; margin-bottom: 40%; }
-  h2, h3, .pola-shopie, .polas-accueil { display: none; }
+  h2, h3, .pola-shopie, .polas-accueil, .j-aime-img, .polas-mathieu-celine, .pola-terral{ display: none; }
   .col-right { margin-left: 0; width: 100%; margin-top: 175px; height: auto; }
   .btn-margin { margin: 0; }
   p { padding: 0 20px; }
