--- a/modules/admin/app/public/views/admin/partials/data/photos.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/photos.hbs
@@ -22,8 +22,8 @@
                     <br>
                     {{#unless HellosId}}Image test{{else}}&nbsp;{{/unless}}
                     </p>
-                </div><br>
-                <button type="button" class="btn btn-default photo-of-the-day" data-filename="{{filename}}">Mettre comme photo du jour</button>
+                    <button type="button" class="btn btn-default photo-of-the-day btn-xs" data-filename="{{filename}}">Photo du jour</button>
+                </div>
             </div>
         </div>
     </div>
