--- a/modules/admin/app/public/views/public/stats.hbs
+++ b/modules/admin/app/public/views/public/stats.hbs
@@ -37,7 +37,7 @@
                     <span class="glyphicon glyphicon-user team-a-text"></span><br>
                     <div class="caption">
                         <h3><span class="label label-default team-a-score"></span></h3>
-                        <p>Achats, Comptabilité, Juridique, RH et Direction<br>&nbsp;</p>
+                        <p>Achats, Comptabilité, Juridique, RH et Direction</p>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                     <span class="glyphicon glyphicon-user team-c-text"></span><br>
                     <div class="caption">
                         <h3><span class="label label-default team-c-score"></span></h3>
-                        <p>Commerciaux grand public et groupes<br>&nbsp;</p>
+                        <p>Commerciaux grand public et groupes</p>
                     </div>
                 </div>
             </div>
